--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2676,3 +2676,125 @@ table td .actions .view_biodata_btn {
 }
 
 /* dashboard area end */
+/* invoice area start */
+.invoice_area {
+	padding-top: 80px;
+}
+
+.payment-invoice {
+	width: 100%;
+	background-color: #fff;
+	/* box-shadow: 0 0px 20px rgb(0 0 0 / 7%); */
+	border: 1px solid var(--border-colour);
+}
+
+
+.invoice-header {
+	width: 100%;
+	height: 120px;
+	background-color: var(--background);
+}
+
+.left-part-header {
+	padding: 25px;
+}
+
+.invoice-top {
+	width: 100%;
+	padding: 40px 30px 30px 30px;
+}
+
+.invoice-top h5 {
+	font-size: 17px;
+	color: var(--primary);
+	font-weight: 600;
+	margin-bottom: 5px;
+	text-transform: uppercase;
+}
+
+.invoice-top h4 {
+	font-size: 20px;
+	text-transform: capitalize;
+	font-size: 18px;
+	font-weight: 600;
+	margin-bottom: 8px;
+}
+
+.invoice-top ul li {
+	color: var(--paragraph-color);
+	font-size: 14px;
+	font-weight: 500;
+}
+
+.table-head {
+	background-image: linear-gradient(to bottom, #2064fd, #5bb1ef) !important;
+	color: #fff;
+}
+
+.invoice-table {
+	padding: 0 30px;
+}
+
+.invoice-table h5 {
+	font-size: 17px;
+	font-weight: 400;
+}
+
+.invoice-table h4 {
+	font-size: 17px;
+	font-weight: 400;
+}
+
+.invoice-footer-left {
+	width: 100%;
+	background-color: var(--background);
+	border-top-right-radius: 200px;
+	position: relative;
+	padding: 25px 0 25px 30px;
+}
+
+.invoice-footer-left ul li {
+	color: #454545 !important;
+	font-size: 14px;
+	padding-left: 0;
+	margin-left: 24px;
+	font-weight: 600;
+}
+
+.invoice-footer-left ul li:first-child {
+	margin-left: 15px;
+}
+
+.invoice-footer-left ul li i {
+	padding-right: 5px;
+	font-size: 14px;
+}
+
+.invoice-footer-left ul li span {
+	color: #454545 !important;
+}
+
+.right-part-header {
+	width: 100%;
+	height: 140px;
+	background-image: var(--gradient);
+	border-bottom-left-radius: 130px;
+	padding-right: 30px;
+}
+
+.right-part-header h3 {
+	font-size: 24px;
+	color: #fff;
+	text-transform: uppercase;
+	font-weight: 700;
+}
+
+.right-part-header ul li {
+	color: #fff;
+	margin: 4px 0;
+	font-size: 15px;
+	font-weight: 500;
+}
+
+
+/* invoice area end */
