--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -572,6 +572,7 @@ select:focus {
 	border: 0;
 	padding: 0 26px;
 	border-radius: 5px;
+	width: 115px;
 }
 
 .banner_area .banner_info .search_box .button_field button i {
@@ -951,7 +952,7 @@ Gallery part
 	position: relative;
 }
 
-.video_gallery .video_item img{
+.video_gallery .video_item img {
 	border-radius: 10px;
 }
 
@@ -1166,7 +1167,7 @@ footer .contact_number ul a:hover {
 	border: 0;
 	position: fixed;
 	bottom: -60px;
-	right: 30px;
+	right: 15px;
 	transition: background-color 0.3s, opacity 0.5s, visibility 0.5s;
 	opacity: 0;
 	visibility: hidden;
@@ -1191,7 +1192,36 @@ footer .contact_number ul a:hover {
 .scroll-to-top.show {
 	opacity: 1;
 	visibility: visible;
-	bottom: 30px;
+	bottom: 75px;
+}
+
+.whatsapp_icon {
+	width: 40px;
+	height: 40px;
+	background: #25D366;
+	border: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	color: var(--white);
+	font-size: 26px;
+	border-radius: 4px;
+	margin: 5px 0px;
+	cursor: pointer;
+	position: fixed;
+	bottom: 15px;
+	right: 15px;
+}
+.whatsapp_icon::after {
+	position: absolute;
+	z-index: -1;
+	content: '';
+	top: 100%;
+	left: 5%;
+	height: 10px;
+	width: 90%;
+	opacity: 1;
+	background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.25) 0%, rgba(0, 0, 0, 0) 80%);
 }
 
 /* bread crumb part start */
